--- a/src/style/_json-editor.scss
+++ b/src/style/_json-editor.scss
@@ -8,16 +8,16 @@ div.jsoneditor-tree div.jsoneditor-tree-inner {
     padding: 0;
     tbody {
       tr{
-        line-height: 1.2em;
+        line-height: 1em;
         margin: 0;
         padding: 0;
         td {
           padding: 0;
-          line-height: 1.2em;
+          line-height: 1em;
           &:first-of-type {
             padding: 0;
             min-width: auto;
-            margin: 0.5em;
+            margin: 0;
           }
         }
       }
@@ -27,7 +27,7 @@ div.jsoneditor-tree div.jsoneditor-tree-inner {
   div.jsoneditor-tree button.jsoneditor-collapsed,
   div.jsoneditor-tree button.jsoneditor-expanded {
     padding: 0;
-    margin: 0.2em 0 0;
+    margin: 0 0.1em;
   }
 
   div.jsoneditor-field,
@@ -41,7 +41,7 @@ div.jsoneditor-tree div.jsoneditor-tree-inner {
   div.jsoneditor-value.jsoneditor-null,
   div.jsoneditor-value.jsoneditor-invalid {
     font-size: 1.2em;
-    line-height: 1.2em;
+    line-height: 1em;
     margin: 0.1em;
     padding: 0.1em;
   }
