--- a/src/style/_json-editor.scss
+++ b/src/style/_json-editor.scss
@@ -27,7 +27,7 @@ div.jsoneditor-tree div.jsoneditor-tree-inner {
   div.jsoneditor-tree button.jsoneditor-collapsed,
   div.jsoneditor-tree button.jsoneditor-expanded {
     padding: 0;
-    margin: 0 0.1em;
+    margin: 0;
   }
 
   div.jsoneditor-field,
