--- a/src/style/_json-editor.scss
+++ b/src/style/_json-editor.scss
@@ -51,6 +51,15 @@ div.jsoneditor-tree div.jsoneditor-tree-inner {
   }
 }
 
-
+.download-contents {
+  bottom: 3px;
+  right: 3px;
+  border-radius: 4px;
+  font-weight: 600;
+  font-size: 12px;
+  height: 24px;
+  width: 75px;
+  z-index: 9999;
+}
 
 
